# cerberus

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
docs/: README.md  SCANNER_ARCHITECTURE.md
src/cerberus/: __init__.py
src/cerberus/core/: __init__.py  risk_level.py  scan_result.py  scanner.py
src/cerberus/scanners/: __init__.py  hash_scanner.py
src/cerberus/utils/: __init__.py  file_utils.py
tests/unit/core/: test_risk_level.py  test_scan_result.py
tests/unit/scanners/: test_hash_scanner.py
tests/unit/utils/: test_file_utils.py
